--- a/lessonbuilder/tool/src/webapp/templates/ShowPage.html
+++ b/lessonbuilder/tool/src/webapp/templates/ShowPage.html
@@ -143,15 +143,17 @@
 		       </div>
 	     <div class="action topaction">
                  <span id="expandCollapseButtons" style="display:none;">
-                   <a href="#" role="button" id="expandAllSections"><span class="fa fa-toggle-down" aria-hidden="true" style="padding-right:5px;"></span><span rsf:id="msg=simplepage.expand.all"></span></a>
-                   <a href="#" role="button" id="collapseAllSections" style="display:none;"><span class="fa fa-toggle-up" aria-hidden="true" style="padding-right:5px;"></span><span rsf:id="msg=simplepage.collapse.all"></span></a>
+                   <a href="#" role="button" id="expandAllSections" class="button menuitem"><span class="fa fa-toggle-down" aria-hidden="true" style="padding-right:5px;"></span><span rsf:id="msg=simplepage.expand.all"></span></a>
+                   <a href="#" role="button" id="collapseAllSections" style="display:none;" class="button menuitem"><span class="fa fa-toggle-up" aria-hidden="true" style="padding-right:5px;"></span><span rsf:id="msg=simplepage.collapse.all"></span></a>
 		 </span>
-
+		 <span>
+		   <a role="button" href="#" rsf:id="prev" class="nexprev prev menuitem button">prev</a>
+		   <a role="button" href="#" rsf:id="next" class="nexprev prev menuitem button">next</a>
+		 </span>
 		 <a role="button"  href="#" rsf:id="print-view" id="print-view" onclick="window.open(printView(window.location.href));return false" class="Mrphs-toolTitleNav__link top-icon fa fa-print"><span rsf:id="msg=simplepage.print_view" class="Mrphs-itemTitle"></span></a>
 		 <a role="button" href="#" rsf:id="show-pages" id="show-pages" class="Mrphs-toolTitleNav__link top-icon fa fa-list-ul"><span rsf:id="msg=simplepage.showallpages" class="Mrphs-itemTitle"></span></a>
-
 		 <span rsf:id="gradingSpan" class="gradingarea">
-		     <a role="button" href="#" rsf:id="gradingBack" style="margin-right:2px;background:none" class="usebutton grading-nextprev">&#60;</a><img class="statusImg" src="$context/images/no-status.png" id="statusImg" height="16px" width="16px" alt=""></img><span style="*vertical-align:13%"  rsf:id="msg=simplepage.comments-points"></span><span style="display:none" class="uuidBox" rsf:id="commentsUUID"></span><span style="display:none" class="pointsSpan" rsf:id="commentPoints"></span> <input rsf:id="studentPointsBox"  id="studentPointsBox" type="text" style="font-size:100%"  size="3"></input> / <span rsf:id="topmaxpoints"></span> <a role="button" class="usebutton" href="#" rsf:id="msg=simplepage.submit" style="background:none; width:auto; *vertical-align:13%;margin-right:.5em" id="submit-grading"></a> <a role="button" style="background:none" href="#" rsf:id="gradingForward" class="usebutton grading-nextprev">&#62;</a>
+		   <a role="button" href="#" rsf:id="gradingBack" style="margin-right:2px;background:none" class="usebutton grading-nextprev">&#60;</a><img class="statusImg" src="$context/images/no-status.png" id="statusImg" height="16px" width="16px" alt=""></img><span style="*vertical-align:13%"  rsf:id="msg=simplepage.comments-points"></span><span style="display:none" class="uuidBox" rsf:id="commentsUUID"></span><span style="display:none" class="pointsSpan" rsf:id="commentPoints"></span> <input rsf:id="studentPointsBox"  id="studentPointsBox" type="text" style="font-size:100%"  size="3"></input> / <span rsf:id="topmaxpoints"></span> <a role="button" class="usebutton" href="#" rsf:id="msg=simplepage.submit" style="background:none; width:auto; *vertical-align:13%;margin-right:.5em" id="submit-grading"></a> <a role="button" style="background:none" href="#" rsf:id="gradingForward" class="usebutton grading-nextprev">&#62;</a>
 		 </span>
 
 		   <a role="button" aria-haspopup="dialog" aria-controls="direct-dialog" href="#" rsf:id="directurl" id="directurl" class="title-tools tool-directurl Mrphs-toolTitleNav__link Mrphs-toolTitleNav__link--directurl">
@@ -174,6 +176,7 @@
     		</div>
         </div>
 		
+		 <div id="subpage-breadcrumb-div" class="subpage-breadcrumb-div"></div>
 	
 		<div rsf:id="tool-bar:" class="navIntraTool" role="application" style="z-index:100000" aria-labelledby="tool-bar::toolbar-label">
 			<h3 id="toolbar-label" rsf:id="msg=simplepage.toolbar" class="offscreen"></h3>
@@ -239,18 +242,18 @@
 		
 <script type="text/javascript">
 	var breadcrumbs = jQuery(".breadcrumbs span");
-	// if we're in morpheus, move breadcrums into top bar, and generate an H2 with the title
 	if (jQuery(".oldPortal").size() === 0) {
 	    var title = jQuery(".title span:last").text();
 	    var owner = jQuery("#owner").text();
 	    var title = title + owner;
 	    if (breadcrumbs.size() > 0) {
-		jQuery(".Mrphs-siteHierarchy").append(jQuery(".breadcrumbs span").slice(1));
+		jQuery(".subpage-breadcrumb-div").append(jQuery(".breadcrumbs span").slice(1));
+		jQuery(".subpage-breadcrumb-div").prepend('<a id="lessonReset">' + jQuery(".Mrphs-hierarchy--toolName").text().trim() + '</a>');
+		jQuery("#lessonReset").attr("href", jQuery(".Mrphs-hierarchy--toolName")[0].href);
+	    } else {
+		jQuery(".subpage-breadcrumb-div").css({"display": "none"});
 	    }
 	    jQuery(".Mrphs-siteHierarchy").children().wrapAll('<div class="hierarchyWrap" />');
-	    //jQuery(".Mrphs-siteHierarchy").append(jQuery("span.nextprev"));
-	    jQuery(".neoPortletTitleWrap").before('<h2 class="genTitle"></h2>');
-	    jQuery(".genTitle").text(title);
 
 	    jQuery(".Mrphs-toolTitleNav__addRight").before(jQuery(".topaction > a"));
 	    jQuery(".Mrphs-toolTitleNav__button_container > a").addClass("Mrphs-toolTitleNav__link");
@@ -258,12 +261,10 @@
          } else {
 	     jQuery(".topaction > a").addClass("button");
          }
-	 if (jQuery(".navIntraTool").size() > 0)
-  	   jQuery(".navIntraTool").append(jQuery(".action"));
-	 else
-	   jQuery(".neoPortletTitleWrap").before(jQuery(".action"));
 
+	jQuery(".Mrphs-toolTitleNav__button_container").after(jQuery(".action"));
 
+	jQuery(".portletBody").prepend(jQuery(".navIntraTool"));
 </script>
 
 		<div id="addContentDiv" style="display:none" class="dropDownDiv specialLink lessonsDialog" role="menu" aria-label="Add content menu">
@@ -402,13 +403,6 @@
 		<ul id="error-list" rsf:id="error-list:" role="alert">
 		  <li id="error-item" rsf:id="error-item:"><span id="error-item-text" rsf:id="error-item-text">missing page</span></li>
 		</ul>
-
-		<ul class="top-next-prev navIntraTool">
-                    <li>
-                        <span><a role="button" href="#" rsf:id="prev" class="nexprev prev menuitem button">prev</a> <a role="button" href="#" rsf:id="next" class="nextprev next menuitem button">next</a> </span>
-                    </li>
-                </ul>
-
 		<div class="itemclass" rsf:id="itemContainer:" role="main" style="z-index: 1;">
 
             <div style="display:none" rsf:id="current-item-id"></div>
@@ -963,10 +957,8 @@
 		   ></iframe>
 		   <ul class="navIntraTool">
 		   <li class="bottomButtons contentButton">
-		   <span>
-		   <a role="button" href="#" rsf:id="prev1">next</a> 
-		   <a role="button" class="bottomRight" href="#" rsf:id="next1">next</a> 
-		   </span>
+		   <a role="button" class="nexprev prev menuitem button" href="#" rsf:id="prev1">next</a> 
+		   <a role="button" class="bottomRight nexprev prev menuitem button" href="#" rsf:id="next1">next</a>
 		   </li>
 		   </ul>
 
