--- a/content/content-tool/tool/src/webapp/vm/content/chef_resources_reorder.vm
+++ b/content/content-tool/tool/src/webapp/vm/content/chef_resources_reorder.vm
@@ -20,9 +20,7 @@
 		</div>
 		<div class="instruction">
 			$tlang.getString("sort.instruction.general")
-				<span id="inputFieldMessage" style="display:none">$tlang.getString('sort.instruction.input')</span>
-				<span id="inputKbdMessage" class="skip">$tlang.getString('sort.instruction.general.hidden')</span>
-			
+				<span id="inputKbdMessage" class="sr-only">$tlang.getString('sort.instruction.general.hidden')</span>
 		</div>
 		
 		<ul class="itemAction noPrint">
